--- a/emergentKeyIdeas.Rmd
+++ b/emergentKeyIdeas.Rmd
@@ -83,7 +83,7 @@ good, clear ideas that we hope to spread.
 
 - We can't simply compute $\kappa$ from the moments without bias
 The unbiased estimates $m$ and $V$  are both subject to sampling noise, and
-biase arises from squaring the mean, and from taking the ratio that includes the
+bias arises from squaring the mean, and from taking the ratio that includes the
 mean-offsetting of the variance.
 
 - MLE for negative binomial works ok once samples get large enough, but has strong bias at low SS
@@ -92,7 +92,15 @@ Some methods notes on this: We compute the MLE using **bbmle**, with the
 likelihood given by the base-R `dnbinom`. The bbmle profiling function
 `bbmle::proffun()` generates a likelihood profile, and we compute the upper and
 lower confidence limits with that profile by finding the place where the signed
-square root deviance difference is ± 1.96. We should talk to Ben about this. 
+square root deviance difference is ± 1.96. We should talk to Ben about this.
+
+Some to-dos on this front: 
+Lloyd-Smith et al. 2005 supplement has a pile of
+notes and references on this topic. I need to take a look at the refs
+especially, and do a forward search on key ones.
+
+Lloyd-Smith et al. also focus on N≥20; we should figure out what sample sizes we 
+care about for this project. 
 
 ```{r set fig cap MLE exp, echo=FALSE}
 cap1 <- c("MLE for kappa (inverse shape parameter) for a negative binomial is downward biased and bias may be severe with small samples. Here, n = 6. Blue line represents the true kappa (1), point estimates and CI from each sample of 6 are ranked and plotted against their \"quantile\". CI that do not overlap the target are colored red. For valid CI, the bottom 2.5% fall entirely below the target and top 2.5% above, and the rest contain the target.")
