--- a/RcNotes.tex
+++ b/RcNotes.tex
@@ -16,32 +16,47 @@ $$
 
 where $Z$ is the size of the epidemic.
 
-We can integrate over time since infection $\delta$, and write:
+We can calculate $C(T)$ by integrating over time since infection $\delta$:
 
-$$C(t) = B \int{d\delta\, x(t+\delta) \exp(-\delta)}$$
+$$C(t) = B \int{d\delta\, x(t+\delta) \exp(-\delta)}, $$
 
-We can also solve the $\dot y$ equation, by looking at who has come in $\tau$ time ago and how many of them survived:
+or, in terms of time of contact $\tau=t+\delta$:
 
-$$ y(t) = \int{d\tau\, i(t-\tau)\exp(-\tau)}$$
+$$C(t) = B \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)}, $$
 
-There should be some good trick for re-arranging this to get $\bar C$, and we're going to work on that, even though it's not at all clear that it would help with $\kappa_C$.
+We can also solve the $\dot y$ equation, by looking at who was infected at time $\theta$, and how many of them survived:
 
-JD thought earlier that the next step would be to expand the first integral, so let's try that:
+$$ y(t) = \int_{\theta<t}{d\theta\, i(\theta)\exp(\theta-t)},$$
 
-\begin{eqnarray}
-	Z \bar C \\
-	&=& \int{dt\, i(t) C(t)} \\
-	&=& B \int{dt\, x(t) y(t) C(t)} \\
-	&=& B \int{dt\, x(t) \int{d\tau\, i(t-\tau)\exp(-\tau)} C(t)} \\
-	&=& B^2 \int{dt\, x(t) \int{d\tau\, i(t-\tau)\exp(-\tau)} \int{d\delta\, x(t+\delta) \exp(-\delta)}}
-\end{eqnarray}
-
-The next thing might be to rewrite in terms of event times, e.g., $\sigma=t-\tau$, $\theta=t+\delta$:
+and then expand:
 
 \begin{eqnarray}
 	Z \bar C
-	\\ &=& B^2 \int_{\sigma<t<\theta}{dQ\, x(t) i(\sigma)\exp(\sigma-t) x(\theta) \exp(t-\theta)}
-	\\ &=& B^2 \int_{\sigma<t<\theta}{dQ\, x(t) i(\sigma) x(\theta) \exp(\sigma-\theta)}
+	&=& \int{dt\, i(t) C(t)}
+	\\ &=& B \int{dt\, i(t) \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)}}
+	\\ &=& B \int{d\tau\, x(\tau) \int_{t<\tau}dt\, i(t) \exp(t-\tau)}
+	\\ &=& B \int{d\tau\, x(\tau) y(\tau)}
+	\\ &=& \int{d\tau\, i(\tau)}
+	\\ &=& Z
 \end{eqnarray}
+
+This works, but seems suspiciously hard to extend. In particular, it probably doesn't make use of the fact that we are using an exponential generation interval, whereas the hard conjecture will need to use that.
+
+What if we try? One trick we're using here is that to integrate $f^2(x)$ over a range, we can just take twice the integral of $f(x)f(y)$ over a triangle where we assume we know $x>y$. This allows a similar limit-switching move as above.
+\begin{eqnarray}
+	&& \int{dt\, i(t) C^2(t)}
+	\\ &=& 2B^2 \int{dt\, i(t) \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)}}
+		\int_{\sigma>\tau}{d\sigma\, x(\sigma) \exp(t-\sigma)}
+	\\ &=& 2B^2 \int{d\tau\, x(\tau) \exp(t-\tau)}
+		\int_{\sigma>\tau}{d\sigma\, x(\sigma)}
+		\int_{t>\sigma}{dt\, i(t) \exp(t-\sigma)}
+	\\ &=& 2B^2 \int{d\tau\, x(\tau) \exp(t-\tau)}
+		\int_{\sigma>\tau}{d\sigma\, x(\sigma) y(\sigma)}
+	\\ &=& 2B \int{d\tau\, x(\tau) \exp(t-\tau)}
+		\int_{\sigma>\tau}{d\sigma\, i(\sigma)}
+	\\ &=& 2B \int{d\tau\, x(\tau) \exp(t-\tau) (Z-x(\tau))}
+\end{eqnarray}
+
+It this is correct it could at the least allow us to do much more efficient integration.
 
 \end{document}
