--- a/RcNotes.tex
+++ b/RcNotes.tex
@@ -54,4 +54,15 @@ What if we try? One trick we're using here is that to integrate $f^2(x)$ over a 
 
 This one looks like a dead end again.
 
+What if we try a half-expansion? Am I going crazy? 
+\begin{eqnarray}
+	&& \int{dt\, i(t) C^2(t)}
+	\\ &=& 2B^2 \int{dt\, i(t) \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau) C(\tau)}}
+	\\ &=& 2B^2 \int{d\tau\, x(\tau) C(\tau) \int_{t<\tau}{dt\, i(t) \exp(t-\tau)}}
+	\\ &=& 2B^2 \int{d\tau\, x(\tau) C(\tau) y(\tau)}
+	\\ &=& 2 \int{d\tau\, C(\tau) i(\tau)}
+\end{eqnarray}
+
+Wait! Did I just prove the Roswell Conjecture‽ It \emph{seems} too simple (we haven't seen how far the “proof” would go with a different infectiousness kernel), but maybe I accidentally leveraged the distribution-matching property of the exponential (infectious period has same distribution as generation interval) – that actually seems plausible.
+
 \end{document}
