--- a/RcNotes.tex
+++ b/RcNotes.tex
@@ -43,18 +43,8 @@ and then expand:
 This works, but seems suspiciously hard to extend. In particular, it probably doesn't make use of the fact that we are using an exponential generation interval, whereas the hard conjecture will need to use that.
 
 What if we try? One trick we're using here is that to integrate $f^2(x)$ over a range, we can just take twice the integral of $f(x)f(y)$ over a triangle where we assume we know $x>y$. This allows a similar limit-switching move as above.
-\begin{eqnarray}
-	&& \int{dt\, i(t) C^2(t)}
-	\\ &=& 2B^2 \int{dt\, i(t) \int_{\sigma>t}{d\sigma\, x(\sigma) \exp(t-\sigma)}}
-		\int_{\tau>\sigma}{d\tau\, x(\tau) \exp(t-\tau)}
-	\\ &=& 2B^2 \int{d\tau\, x(\tau)}
-		\int_{\sigma<\tau}{d\sigma\, x(\sigma)}
-		\int_{t<\sigma}{dt\, i(t) \exp(t-\sigma) \exp(t-\tau)}
-\end{eqnarray}
 
-This one looks like a dead end again.
-
-What if we try a half-expansion? Am I going crazy? 
+Expanding was a disaster (not currently shown), so we try a half-expansion (expand one of the two factors of $C$.
 \begin{eqnarray}
 	&& \int{dt\, i(t) C^2(t)}
 	\\ &=& 2B^2 \int{dt\, i(t) \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau) C(\tau)}}
@@ -63,6 +53,8 @@ What if we try a half-expansion? Am I going crazy?
 	\\ &=& 2 \int{d\tau\, C(\tau) i(\tau)}
 \end{eqnarray}
 
-Wait! Did I just prove the Roswell Conjecture‽ It \emph{seems} too simple (we haven't seen how far the “proof” would go with a different infectiousness kernel), but maybe I accidentally leveraged the distribution-matching property of the exponential (infectious period has same distribution as generation interval) – that actually seems plausible.
+Wait! Does this prove the Roswell Conjecture‽ It \emph{seems} too simple (we haven't seen how far the “proof” would go with a different infectiousness kernel), but maybe we accidentally leveraged the distribution-matching property of the exponential (infectious period has same distribution as generation interval) – that actually seems plausible.
+
+PS: This does seem to work, it yields a squared-sum of $2Z/Z = 2$ to go with the mean of 1, so it would be a variance of 1.
 
 \end{document}
