--- a/RcNotes.tex
+++ b/RcNotes.tex
@@ -55,6 +55,6 @@ Expanding was a disaster (not currently shown), so we try a half-expansion (expa
 
 Wait! Does this prove the Roswell Conjecture‽ It \emph{seems} too simple (we haven't seen how far the “proof” would go with a different infectiousness kernel), but maybe we accidentally leveraged the distribution-matching property of the exponential (infectious period has same distribution as generation interval) – that actually seems plausible.
 
-PS: This does seem to work, it yields a squared-sum of $2Z/Z = 2$ to go with the mean of 1, so it would be a variance of 1.
+PS: This does balance correctly, fwiw: it yields a squared-sum of $2Z/Z = 2$ to go with the mean of 1, so a variance of 1.
 
 \end{document}
