--- a/RcNotes.tex
+++ b/RcNotes.tex
@@ -45,9 +45,9 @@ Now try to expand the sum of squares. One trick we're using here is that to inte
 Expanding was a disaster (not currently shown), so we try a half-expansion (expand one of the two factors of $C$).
 \begin{eqnarray}
 	&& \int{dt\, i(t) C^2(t)}
-	\\ &=& 2B^2 \int{dt\, i(t) \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau) C(\tau)}}
-	\\ &=& 2B^2 \int{d\tau\, x(\tau) C(\tau) \int_{t<\tau}{dt\, i(t) \exp(t-\tau)}}
-	\\ &=& 2B^2 \int{d\tau\, x(\tau) C(\tau) y(\tau)}
+	\\ &=& 2B \int{dt\, i(t) \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau) C(\tau)}}
+	\\ &=& 2B \int{d\tau\, x(\tau) C(\tau) \int_{t<\tau}{dt\, i(t) \exp(t-\tau)}}
+	\\ &=& 2B \int{d\tau\, x(\tau) C(\tau) y(\tau)}
 	\\ &=& 2 \int{d\tau\, C(\tau) i(\tau)}
 \end{eqnarray}
 
