--- a/RcNotes.tex
+++ b/RcNotes.tex
@@ -9,9 +9,9 @@ $$ i = Bxy; \dot x = -i; \dot y = i-y $$
 If $C(t)$ is the case reproductive number for an individual infected at time $t$, then the overall mean is:
 
 $$
-	\bar C 
+	\bar C
 	= \frac{\int{dt\, i(t) C(t)}}{\int{dt\, i(t)}}
-	= \frac{\int{dt\, i(t) C(t)}}{Z}, 
+	= \frac{\int{dt\, i(t) C(t)}}{Z},
 $$
 
 where $Z$ is the size of the epidemic.
@@ -23,6 +23,9 @@ $$C(t) = B \int{d\delta\, x(t+\delta) \exp(-\delta)}, $$
 or, in terms of time of contact $\tau=t+\delta$:
 
 $$C(t) = B \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)}, $$
+
+It may be helpful to calculate $J(t)$, or the expected number of susceptible contacts for an individual infected at time $t$
+$$J(t) = \frac{C(t)}{B} = \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)}, $$
 
 We can also solve the $\dot y$ equation, by looking at who was infected at time $\theta$, and how many of them survived:
 
@@ -40,19 +43,30 @@ and then expand:
 	\\ &=& Z
 \end{eqnarray}
 
-Now try to expand the sum of squares. One trick we're using here is that to integrate $f^2(x)$ over a range, we can just take twice the integral of $f(x)f(y)$ over a triangle where we assume we know $x>y$. This allows a similar limit-switching move as above.
+Now try to expand the sum of squares. One trick we're using here is that to compute the square of the integral of $f(x)$ over a range, we can just take twice the integral of $f(x)f(y)$ over a triangle where we assume we know $x>y$.
 
-Expanding was a disaster (not currently shown), so we try a half-expansion (expand one of the two factors of $C$).
 \begin{eqnarray}
-	&& \int{dt\, i(t) C^2(t)}
-	\\ &=& 2B \int{dt\, i(t) \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau) C(\tau)}}
-	\\ &=& 2B \int{d\tau\, x(\tau) C(\tau) \int_{t<\tau}{dt\, i(t) \exp(t-\tau)}}
-	\\ &=& 2B \int{d\tau\, x(\tau) C(\tau) y(\tau)}
-	\\ &=& 2 \int{d\tau\, C(\tau) i(\tau)}
+\int{dt\, i(t) C^2(t)}
+	\\ = \int{dt\, i(t) (B \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)})^2}
+	\\ = B^2 \int{dt\, i(t) (\int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)})^2}
+	\\ =  2B^2 \int{dt\, i(t) \int_{\tau>t}{d\tau\, \int_{\sigma>\tau}{d\sigma\, x(\tau) x(\sigma) \exp(t-\tau)\exp(t-\sigma)}}}
 \end{eqnarray}
 
-Wait! Does this prove the Roswell Conjecture‽ It \emph{seems} too simple (we haven't seen how far the “proof” would go with a different infectiousness kernel), but maybe we accidentally leveraged the distribution-matching property of the exponential (infectious period has same distribution as generation interval) – that actually seems plausible.
+Now, use the limit-switching move as above, then substitute $J(\tau)$
+\begin{eqnarray}
+2B^2 \int{dt\, i(t) \int_{\tau>t}{d\tau\, \int_{\sigma>\tau}{d\sigma\, x(\tau) x(\sigma) \exp(t-\tau)\exp(t-\sigma)}}}
+  \\ = 2B^2 \int{d\tau, y(\tau)x(\tau) \int_{\sigma > \tau}{d\sigma\, x(\sigma)\exp(\tau-\sigma)}}
+  \\ = 2B^2 \int{d\tau, y(\tau)x(\tau)J(\tau)}
+\end{eqnarray}
 
-PS: This does balance correctly, fwiw: it yields a squared-sum of $2Z/Z = 2$ to go with the mean of 1, so a variance of 1.
+	% \\ &=& 2B \int{dt\, i(t) \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau) C(\tau)}}
+	% \\ &=& 2B \int{d\tau\, x(\tau) C(\tau) \int_{t<\tau}{dt\, i(t) \exp(t-\tau)}}
+	% \\ &=& 2B \int{d\tau\, x(\tau) C(\tau) y(\tau)}
+	% \\ &=& 2 \int{d\tau\, C(\tau) i(\tau)}
+
+
+% Wait! Does this prove the Roswell Conjecture‽ It \emph{seems} too simple (we haven't seen how far the “proof” would go with a different infectiousness kernel), but maybe we accidentally leveraged the distribution-matching property of the exponential (infectious period has same distribution as generation interval) – that actually seems plausible.
+%
+% PS: This does balance correctly, fwiw: it yields a squared-sum of $2Z/Z = 2$ to go with the mean of 1, so a variance of 1.
 
 \end{document}
