--- a/RcNotes.tex
+++ b/RcNotes.tex
@@ -55,9 +55,11 @@ Now try to expand the sum of squares. One trick we're using here is that to comp
 Now, use the limit-switching move as above, then substitute $J(\tau)$
 \begin{eqnarray}
 2B^2 \int{dt\, i(t) \int_{\tau>t}{d\tau\, \int_{\sigma>\tau}{d\sigma\, x(\tau) x(\sigma) \exp(t-\tau)\exp(t-\sigma)}}}
-  \\ = 2B^2 \int{d\tau, y(\tau)x(\tau) \int_{\sigma > \tau}{d\sigma\, x(\sigma)\exp(\tau-\sigma)}}
-  \\ = 2B^2 \int{d\tau, y(\tau)x(\tau)J(\tau)}
+  \\ = 2B^2 \int{d\tau\, y(\tau)x(\tau) \int_{\sigma > \tau}{d\sigma\, x(\sigma)\exp(\tau-\sigma)}}
+  \\ = 2B^2 \int{d\tau\, y(\tau)x(\tau)J(\tau)}
 \end{eqnarray}
+
+Maybe there's something good with the expression above; following the same logic as expr 1-6, this simplifies to $2$ as well.
 
 	% \\ &=& 2B \int{dt\, i(t) \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau) C(\tau)}}
 	% \\ &=& 2B \int{d\tau\, x(\tau) C(\tau) \int_{t<\tau}{dt\, i(t) \exp(t-\tau)}}
