was a bit sloppy in the conclusion Autocommit

--- a/RcNotes.tex
+++ b/RcNotes.tex
@@ -59,7 +59,7 @@ Now, use the limit-switching move as above, then substitute $J(\tau)$
   \\ = 2B^2 \int{d\tau\, y(\tau)x(\tau)J(\tau)}
 \end{eqnarray}
 
-Maybe there's something good with the expression above; following the same logic as expr 1-6, this simplifies to $2$ as well.
+Maybe there's something good with the expression above; following the same logic as expr 1-6, this simplifies to $2Z$ as well.
 
 	% \\ &=& 2B \int{dt\, i(t) \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau) C(\tau)}}
 	% \\ &=& 2B \int{d\tau\, x(\tau) C(\tau) \int_{t<\tau}{dt\, i(t) \exp(t-\tau)}}
