--- a/RcNotes.tex
+++ b/RcNotes.tex
@@ -6,7 +6,7 @@ Start with the normalized SIR:
 
 $$ i = Bxy; \dot x = -i; \dot y = i-y $$
 
-If $C(t)$ is the case reproductive number for an individual infected at time $t$, then the overall mean is:
+If $C(t)$ is the expected case reproductive number for the cohort infected at time $t$, then the overall mean is:
 
 $$
 	\bar C
@@ -16,16 +16,13 @@ $$
 
 where $Z$ is the size of the epidemic.
 
-We can calculate $C(T)$ by integrating over time since infection $\delta$:
+Individuals in a cohort are effectively assumed to differ only in terms of how long they are infectious. We calculate $C(t)$ as a weighted average over this duration. The probability of having duration $D$ is just $\exp(-\delta)$ in this normalized model, and the reproductive number for this group is given by:
+$$C(t, \delta) = B \int^D{d\delta\, x(t+\delta)}, $$
 
+Thus: 
 $$C(t) = B \int{d\delta\, x(t+\delta) \exp(-\delta)}, $$
-
 or, in terms of time of contact $\tau=t+\delta$:
-
 $$C(t) = B \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)}, $$
-
-It may be helpful to calculate $J(t)$, or the expected number of susceptible contacts for an individual infected at time $t$
-$$J(t) = \frac{C(t)}{B} = \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)}, $$
 
 We can also solve the $\dot y$ equation, by looking at who was infected at time $\theta$, and how many of them survived:
 
@@ -43,14 +40,24 @@ and then expand:
 	\\ &=& Z
 \end{eqnarray}
 
+Thus, $\bar C = 1$, as expected. Note: we could presumably fiddle with having a finite $y_0$ by playing with integral limits in the array above to get something like $(Z-x_0)/Z$.
+
 Now try to expand the sum of squares. One trick we're using here is that to compute the square of the integral of $f(x)$ over a range, we can just take twice the integral of $f(x)f(y)$ over a triangle where we assume we know $x>y$.
+
+First, we look only at between-cohort variance, so our first step is to expand the sum of squares there.
 
 \begin{eqnarray}
 \int{dt\, i(t) C^2(t)}
-	\\ = \int{dt\, i(t) (B \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)})^2}
-	\\ = B^2 \int{dt\, i(t) (\int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)})^2}
+	\\ = \int{dt\, i(t) \left(
+		B \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)}
+	\right)^2}
+	\\ = B^2 \int{dt\, i(t) \left(
+		\int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)}
+	\right)^2}
 	\\ =  2B^2 \int{dt\, i(t) \int_{\tau>t}{d\tau\, \int_{\sigma>\tau}{d\sigma\, x(\tau) x(\sigma) \exp(t-\tau)\exp(t-\sigma)}}}
 \end{eqnarray}
+
+Define $J(t)$, the expected number of susceptible contacts for an individual infected at time $t$, as $\frac{C(t)}{B}$.
 
 Now, use the limit-switching move as above, then substitute $J(\tau)$
 \begin{eqnarray}
