--- a/RcNotes.tex
+++ b/RcNotes.tex
@@ -24,9 +24,6 @@ or, in terms of time of contact $\tau=t+\delta$:
 
 $$C(t) = B \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)}, $$
 
-It may be helpful to calculate $J(t)$, or the expected number of susceptible contacts for an individual infected at time $t$
-$$J(t) = \frac{C(t)}{B} = \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)}, $$
-
 We can also solve the $\dot y$ equation, by looking at who was infected at time $\theta$, and how many of them survived:
 
 $$ y(t) = \int_{\theta<t}{d\theta\, i(\theta)\exp(\theta-t)},$$
@@ -52,14 +49,14 @@ Now try to expand the sum of squares. One trick we're using here is that to comp
 	\\ =  2B^2 \int{dt\, i(t) \int_{\tau>t}{d\tau\, \int_{\sigma>\tau}{d\sigma\, x(\tau) x(\sigma) \exp(t-\tau)\exp(t-\sigma)}}}
 \end{eqnarray}
 
-Now, use the limit-switching move as above, then substitute $J(\tau)$
-\begin{eqnarray}
-2B^2 \int{dt\, i(t) \int_{\tau>t}{d\tau\, \int_{\sigma>\tau}{d\sigma\, x(\tau) x(\sigma) \exp(t-\tau)\exp(t-\sigma)}}}
-  \\ = 2B^2 \int{d\tau\, y(\tau)x(\tau) \int_{\sigma > \tau}{d\sigma\, x(\sigma)\exp(\tau-\sigma)}}
-  \\ = 2B^2 \int{d\tau\, y(\tau)x(\tau)J(\tau)}
-\end{eqnarray}
+Now, we first integrate over $t$ instead.
+  $$ 2B^2 \int{dt\, i(t) \int_{\tau>t}{d\tau\, \int_{\sigma>\tau}{d\sigma\, x(\tau) x(\sigma) \exp(t-\tau)\exp(t-\sigma)}}}$$
+  $$ = 2B^2 \int{d\tau\, x(\tau) \int_{\sigma > \tau}{d\sigma\, x(\sigma) \exp(\tau-\sigma)\int_{t<\tau}{dqt\, i(t) \exp(t-\tau)}}}$$
+Recognizing that the last $dt$ integral is $y(\tau)$ we re-write:
+ $$ 2B^2 \int{d\tau\, y(\tau)x(\tau) \int_{\sigma>\tau}{d\sigma\, x(\sigma) exp(\tau-\sigma)}}$$
 
-Maybe there's something good with the expression above; following the same logic as expr 1-6, this simplifies to $2Z$ as well.
+Distributing $B$ we see that this is twice expr. (2) = $2Z$.
+
 
 	% \\ &=& 2B \int{dt\, i(t) \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau) C(\tau)}}
 	% \\ &=& 2B \int{d\tau\, x(\tau) C(\tau) \int_{t<\tau}{dt\, i(t) \exp(t-\tau)}}
