modified:   RcNotes.tex

--- a/RcNotes.tex
+++ b/RcNotes.tex
@@ -24,6 +24,7 @@ Thus:
 $$C(t) = B \int{d\delta\, x(t+\delta) \exp(-\delta)}, $$
 or, in terms of time of contact $\tau=t+\delta$:
 $$C(t) = B \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)}, $$
+JD: I wrote this, and it's not wrong, but it skips a big step. You have to re-order a double integral and do the inner one.
 
 We can also solve the $\dot y$ equation, by looking at who was infected at time $\theta$, and how many of them survived:
 
