--- a/RcNotes.tex
+++ b/RcNotes.tex
@@ -18,13 +18,19 @@ $$
 where $Z$ is the size of the epidemic.
 
 Individuals in a cohort are effectively assumed to differ only in terms of how long they are infectious. We calculate $C(t)$ as a weighted average over this duration. The probability of having duration $D$ is just $\exp(-\delta)$ in this normalized model, and the reproductive number for this group is given by:
-$$C(t, \delta) = B \int^D{d\delta\, x(t+\delta)}, $$
+$$C(t, D) = B \int^D{d\delta\, x(t+\delta)}, $$
 
-Thus:
-$$C(t) = B \int{d\delta\, x(t+\delta) \exp(-\delta)}, $$
+Since the probability of being infectious for exactly $D$ is $\exp(-D)$:
+\begin{eqnarray}
+	C(t)
+	&=& B \int{dD\, \exp(-D) \int^D{d\delta\, x(t+\delta)}}
+	\\ &=& B \int{dD\, \exp(-D) \int_{\delta<D}{d\delta\, x(t+\delta)}}
+	\\ &=& B \int{d\delta\, x(t+\delta)\int_{D>\delta}{dD\, \exp(-D) }}
+	\\ &=& B \int{d\delta\, x(t+\delta) \exp(-\delta)}
+\end{eqnarray}
+
 or, in terms of time of contact $\tau=t+\delta$:
 $$C(t) = B \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)}, $$
-JD: I wrote this, and it's not wrong, but it skips a big step. You have to re-order a double integral and do the inner one.
 
 We can also solve the $\dot y$ equation, by looking at who was infected at time $\theta$, and how many of them survived:
 
@@ -42,7 +48,7 @@ and then expand:
 	\\ &=& Z
 \end{eqnarray}
 
-Thus, $\bar C = 1$, as expected. Note: we could presumably fiddle with having a finite $y_0$ by playing with integral limits in the array above to get something like $(Z-x_0)/Z$.
+Thus, $\bar C = 1$, as expected. [Note: we could presumably fiddle with having a finite $y_0$ by playing with integral limits in the array above to get something like $(Z-x_0)/Z$.]
 
 Now try to expand the sum of squares. One trick we're using here is that to compute the square of the integral of $f(x)$ over a range, we can just take twice the integral of $f(x)f(y)$ over a triangle where we assume we know $x>y$.
 
@@ -56,59 +62,24 @@ First, we look only at between-cohort variance, so our first step is to expand t
 	\\ = B^2 \int{dt\, i(t) \left(
 		\int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)}
 	\right)^2}
-	\\ =  2B^2 \int{dt\, i(t) \int_{\tau>t}{d\tau\, \int_{\sigma>\tau}{d\sigma\, x(\tau) x(\sigma) \exp(t-\tau)\exp(t-\sigma)}}}
+	\\ =  2B^2 \int{dt\, i(t) 
+		\int_{\tau>t}{d\tau\,  x(\tau) \exp(t-\tau)
+			\int_{\sigma>\tau}{d\sigma\, x(\sigma)\exp(t-\sigma)}
+		}
+	}
+	\\ =  2B^2 \int{
+		d\sigma\, x(\sigma) \int_{\tau<\sigma}{
+			d\tau\,  x(\tau) \int_{t<\tau}{
+				dt\, i(t) \exp(t-\tau) \exp(t-\sigma) 
+			}
+		}
+	}
 \end{eqnarray}
 
-Now, we first integrate over $t$ instead:
-  $$ 2B^2 \int{dt\, i(t) \int_{\tau>t}{d\tau\, \int_{\sigma>\tau}{d\sigma\, x(\tau) x(\sigma) \exp(t-\tau)\exp(t-\sigma)}}}$$
-  $$ = 2B^2 \int{d\tau\, x(\tau) \int_{\sigma > \tau}{d\sigma\, x(\sigma) \exp(\tau-\sigma)\int_{t<\tau}{dt\, i(t) \exp(t-\tau)}}}$$
-Recognizing that the last $dt$ integral is $y(\tau)$ we re-write:
- $$ 2B^2 \int{d\tau\, y(\tau)x(\tau) \int_{\sigma>\tau}{d\sigma\, x(\sigma) \exp(\tau-\sigma)}}$$
+It is not obvious how to do the inner integral, and we expect it to be complicated. It's also not obvious that we can't make \emph{some} progress here, but we don't expect a nice answer.
 
-Distributing $B$ we see that this is twice expr. (2) = $2Z$.
+Now that we're at least probably doing this right, it's not stupid to try the giant expansion (within- and between-cohort) since we think it might have a nice answer, and therefore there might be a nice trick hiding somewhere. This will be complicated, and hopefully we are sufficiently warned now.
 
-
-	% \\ &=& 2B \int{dt\, i(t) \int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau) C(\tau)}}
-	% \\ &=& 2B \int{d\tau\, x(\tau) C(\tau) \int_{t<\tau}{dt\, i(t) \exp(t-\tau)}}
-	% \\ &=& 2B \int{d\tau\, x(\tau) C(\tau) y(\tau)}
-	% \\ &=& 2 \int{d\tau\, C(\tau) i(\tau)}
-
-
-% Wait! Does this prove the Roswell Conjecture‽ It \emph{seems} too simple (we haven't seen how far the “proof” would go with a different infectiousness kernel), but maybe we accidentally leveraged the distribution-matching property of the exponential (infectious period has same distribution as generation interval) – that actually seems plausible.
-%
-% PS: This does balance correctly, fwiw: it yields a squared-sum of $2Z/Z = 2$ to go with the mean of 1, so a variance of 1.
-
-*scribbling
-We said above that the individual cases per case $C_i(t) = B\int_{0}^{\delta}{d\tau\, x(t + \tau)}$ and its expectation for a cohort infected at time $t$ is $C(t) = B\int_{0}^{\infty}{d\delta\, x(t+\delta) \exp(-\delta)}$. Let's work on the second moment for $C_i(t)$ for a sec and see if we can make things line up.
-
-$$\mathbb{E}[C^2_i(t)] = B^2 \mathbb{E}\left[\left(
-  \int_{0}^{\delta}{d\tau\, x(t+\tau)}\right)^2
-  \right]$$
-
-$$ = B^2 \mathbb{E}\left[\left(
-  \int_{0}^{\delta}{d\tau\,\int_{0}^{\delta}{d\tau'\, x(t+\tau) x(t+\tau')}}\right)
-  \right]$$
-
-I think we are allowed to take the expectation over the exponentially distributed durations
-
-$$= B^2 \int_{0}^{\infty}{d\delta\, exp(-\delta)\int_{0}^{\delta}{d\tau\,\int_{0}^{\delta}{d\tau'\, x(t+\tau) x(t+\tau')}}}$$
-
-Do another triangle trick
-
-$$= 2B^2 \int_{0}^{\infty}{d\delta\, exp(-\delta)\int_{0}^{\delta}{d\tau\,\int_{0}^{\tau}{d\tau'\, x(t+\tau) x(t+\tau')}}}$$
-
-Try an order of integration trick, integrating over $\tau$ first instead of $\delta$:
-
-$$= 2B^2 \int_{0}^{\infty}{
-  d\tau\, \int_{0}^{\delta}{
-  d\delta\,exp(-\delta) \int_{\tau}^{\infty}{
-  d\tau'\, x(t+\tau) x(t+\tau')}}}$$
-
-Simplify a bit, computing the integral of the exponential function explicitly
-
-$$= 2B^2 \int_{0}^{\infty}{
-  d\tau\, exp(-\tau) \int_{\tau}^{\infty}{
-  d\tau'\, x(t+\tau) x(t+\tau')}}$$
-
+It's also probably worth just expanding this as a square instead of a triangle, but we don't expect any insight or even substantive difference there (as of now).
 
 \end{document}
