--- a/RcNotes.tex
+++ b/RcNotes.tex
@@ -2,7 +2,7 @@
 \usepackage{amssymb}
 
 \begin{document}
-
+\section{defining the case reproduction number}
 Start with the normalized SIR:
 
 $$ i = Bxy; \dot x = -i; \dot y = i-y $$
@@ -50,6 +50,7 @@ and then expand:
 
 Thus, $\bar C = 1$, as expected. [Note: we could presumably fiddle with having a finite $y_0$ by playing with integral limits in the array above to get something like $(Z-x_0)/Z$.]
 
+\section{between-cohort sum of squares expansion}
 Now try to expand the sum of squares. One trick we're using here is that to compute the square of the integral of $f(x)$ over a range, we can just take twice the integral of $f(x)f(y)$ over a triangle where we assume we know $x>y$.
 
 First, we look only at between-cohort variance, so our first step is to expand the sum of squares there.
@@ -62,7 +63,7 @@ First, we look only at between-cohort variance, so our first step is to expand t
 	\\ = B^2 \int{dt\, i(t) \left(
 		\int_{\tau>t}{d\tau\, x(\tau) \exp(t-\tau)}
 	\right)^2}
-	\\ =  2B^2 \int{dt\, i(t) 
+	\\ =  2B^2 \int{dt\, i(t)
 		\int_{\tau>t}{d\tau\,  x(\tau) \exp(t-\tau)
 			\int_{\sigma>\tau}{d\sigma\, x(\sigma)\exp(t-\sigma)}
 		}
@@ -70,7 +71,7 @@ First, we look only at between-cohort variance, so our first step is to expand t
 	\\ =  2B^2 \int{
 		d\sigma\, x(\sigma) \int_{\tau<\sigma}{
 			d\tau\,  x(\tau) \int_{t<\tau}{
-				dt\, i(t) \exp(t-\tau) \exp(t-\sigma) 
+				dt\, i(t) \exp(t-\tau) \exp(t-\sigma)
 			}
 		}
 	}
@@ -81,5 +82,37 @@ It is not obvious how to do the inner integral, and we expect it to be complicat
 Now that we're at least probably doing this right, it's not stupid to try the giant expansion (within- and between-cohort) since we think it might have a nice answer, and therefore there might be a nice trick hiding somewhere. This will be complicated, and hopefully we are sufficiently warned now.
 
 It's also probably worth just expanding this as a square instead of a triangle, but we don't expect any insight or even substantive difference there (as of now).
+
+\section{Bounding the between-cohort sum of squares}
+For an epidemic with $B>1$, $C(t)$ is above 1 at low $t$ and ends below 1 at high $t$. We know the total number of infections is $Z$, and the weighted mean of $C(t) =1$.
+
+To maximize the variance, we want to have a bimodal distribution, in which a fraction $\alpha$ of infections have $C(t) = 0$ and the rest have $C(t) = \frac{1}{1-\alpha}$.
+In terms of sum of squares $S$, we want to maximize
+$$ S = \alpha 0^2 + (1-\alpha)*(\frac{1}{1-\alpha})^2 = \frac{1}{1-\alpha}$$.
+This (non-SIR-attainable) fraction is at $\alpha = 1/2$.
+Thus, we know that $S \leq 2Z$
+
+Although the SIR model won't give us a bimodal distribution for $C(t)$, we can see that $S$ grows monotonically with $B \geq 1$:
+
+We will rely on the time scaling we've been ignoring to show this. Let's posit $B_2>B_1$ and define the scaling factor
+$k = B_2/B_1$, then
+$x_{B_2}(t) = x_{B_1}(kt)$ etc.
+
+Then we have
+$$C_{B_2}(t) = B_2 \int_{\tau>t}{d\tau\, x_{B_2}(\tau) \exp(t-\tau)} = kB_1\int_{\tau>t}{d\tau\, x_{B_1}(k\tau) \exp(t-\tau)}$$
+
+We can also introduce $u = k\tau$
+
+$$C_{B_2}(t) = B_1 \int_{u>kt}{du\,x_{B_1}(u)\exp(t-u/k)}$$
+$$C_{B_1}(kt) = B_1 \int_{u>kt}{du\,x_{B_1}(u)\exp(kt-u)}$$
+When $u \sim kt$, $\exp(t-u/k) > \exp(kt-u)$, and for $u>>kt$, $\exp(t-u/k) < \exp(kt-u)$
+Thus, for small $t$, $C_{B_2}(t)>C_{B_1}(kt)$, for big $t$ the reverse. For both B's, the mean is 1, but with $B_2$ we have higher highs and lower lows. This should still be clear when we weight by incidence, which follows the same scaling rules as $x$ and $y$, so $S_{B_2}>S_{B_1}$
+$$S_{B_1} = \frac{1}{k}\int{du\, i_{B_1}(u/k) C^2_{B_1}(uk)}$$
+$$S_{B_2}  = \int{du\, i_{B_1}(u) C^2_{B_2}(u/k)} $$
+
+So, I think we know that $S$ grows monotonically with $B \geq 1$, and that $\lim{S} B-> \infty \leq 2Z$.
+
+\section{within-cohort variance component decreases monotonically with B}
+I think we can use a similar logic to prove that the within cohort variance (or sum of squares) decreases monotonically with B. We already know that this is bounded at B ->1 at 1 (or 2Z for SS).
 
 \end{document}
