Fixed some incorrect text! Autocommit

--- a/RcNotes.tex
+++ b/RcNotes.tex
@@ -101,12 +101,21 @@ $x_{B_2}(t) = x_{B_1}(kt)$ etc.
 Then we have
 $$C_{B_2}(t) = B_2 \int_{\tau>t}{d\tau\, x_{B_2}(\tau) \exp(t-\tau)} = kB_1\int_{\tau>t}{d\tau\, x_{B_1}(k\tau) \exp(t-\tau)}$$
 
-We can also introduce $u = k\tau$
+
+We can also introduce $u = k\tau$. Note that weighting by incidence shouldn't change things because of the same scaling described above.
+
+
+
+for $u$ near $kt$, exp(
+
 
 $$C_{B_2}(t) = B_1 \int_{u>kt}{du\,x_{B_1}(u)\exp(t-u/k)}$$
 $$C_{B_1}(kt) = B_1 \int_{u>kt}{du\,x_{B_1}(u)\exp(kt-u)}$$
-When $u \sim kt$, $\exp(t-u/k) > \exp(kt-u)$, and for $u>>kt$, $\exp(t-u/k) < \exp(kt-u)$
-Thus, for small $t$, $C_{B_2}(t)>C_{B_1}(kt)$, for big $t$ the reverse. For both B's, the mean is 1, but with $B_2$ we have higher highs and lower lows. This should still be clear when we weight by incidence, which follows the same scaling rules as $x$ and $y$, so $S_{B_2}>S_{B_1}$
+$\exp(t-u/k) > \exp(kt-u)$, so early in the epidemic, those in the $B_2$ epidemic take advantage of a larger fraction of the time when there are susceptibles available, i.e. early, $C_{B_2}(t)>C_{B_1}(kt)$
+Later on (some time after the peak), this cuts the other way: those in $B_1$ world are sick when some susceptibles remain, but in $B_2$ world they stay sick longer relative to the epidemic's dynammics, i.e. more of their infectious time is during periods with low susceptibility.
+
+To put it in simple terms, for both B's, the mean is 1, but with $B_2$ we have higher highs and lower lows.
+This should still be clear when we weight by incidence, which follows the same scaling rules as $x$ and $y$, so $S_{B_2}>S_{B_1}$
 $$S_{B_1} = \frac{1}{k}\int{du\, i_{B_1}(u/k) C^2_{B_1}(uk)}$$
 $$S_{B_2}  = \int{du\, i_{B_1}(u) C^2_{B_2}(u/k)} $$
 
