added sloppy notes about 0s at the extremes` Autocommit

--- a/RcNotes.tex
+++ b/RcNotes.tex
@@ -121,7 +121,9 @@ $$S_{B_2}  = \int{du\, i_{B_1}(u) C^2_{B_2}(u/k)} $$
 
 So, I think we know that $S$ grows monotonically with $B \geq 1$, and that $\lim{S} B-> \infty \leq 2Z$.
 
+I don't think we exactly proved that it is 0 for B->1, but we understand that based on the fact that R_effective should not change so there is not any between-cohort variation.
+
 \section{within-cohort variance component decreases monotonically with B}
-I think we can use a similar logic to prove that the within cohort variance (or sum of squares) decreases monotonically with B. We already know that this is bounded at B ->1 at 1 (or 2Z for SS).
+I think we can use a similar logic to prove that the within cohort variance (or sum of squares) decreases monotonically with B. We already know that this is bounded at B ->1 at 1 (or 2Z for SS), and I think we also feel it must decline to 0 as the epidemic speeds up.
 
 \end{document}
